--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -5,7 +5,7 @@
 }
 
 .banner__container h1 {
-  padding: 150px 20px;
+  padding-bottom: 125px;
   text-align: left;
   color: white !important;
   filter: drop-shadow(1px 1px 4px black);
