--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,3 +1,8 @@
+//Featured products
+.product__image {
+  width: 100%;
+}
+
 //specific promotion
 
 .specific-promotion {
@@ -29,6 +34,7 @@
 .article {
   background-color: $color-background;
   border: none;
+  margin-top: 40px;
 }
 
 .article__more {
